@@ -1,11 +1,18 @@
 package it.gov.pagopa.payment.service.payment.barcode;
 
-import it.gov.pagopa.common.web.exception.ClientExceptionWithBody;
+import it.gov.pagopa.payment.constants.PaymentConstants.ExceptionCode;
+import it.gov.pagopa.payment.exception.custom.forbidden.BudgetExhaustedException;
+import it.gov.pagopa.payment.exception.custom.forbidden.UserNotOnboardedException;
 import it.gov.pagopa.payment.connector.rest.merchant.MerchantConnector;
 import it.gov.pagopa.payment.connector.rest.wallet.WalletConnector;
+import it.gov.pagopa.payment.connector.rest.wallet.dto.WalletDTO;
+import it.gov.pagopa.payment.constants.PaymentConstants;
 import it.gov.pagopa.payment.dto.barcode.TransactionBarCodeCreationRequest;
 import it.gov.pagopa.payment.dto.barcode.TransactionBarCodeResponse;
-import it.gov.pagopa.payment.dto.mapper.*;
+import it.gov.pagopa.payment.dto.mapper.TransactionBarCodeCreationRequest2TransactionInProgressMapper;
+import it.gov.pagopa.payment.dto.mapper.TransactionBarCodeInProgress2TransactionResponseMapper;
+import it.gov.pagopa.payment.dto.mapper.TransactionCreationRequest2TransactionInProgressMapper;
+import it.gov.pagopa.payment.dto.mapper.TransactionInProgress2TransactionResponseMapper;
 import it.gov.pagopa.payment.model.InitiativeConfig;
 import it.gov.pagopa.payment.model.RewardRule;
 import it.gov.pagopa.payment.model.TransactionInProgress;
@@ -14,13 +21,10 @@ import it.gov.pagopa.payment.repository.TransactionInProgressRepository;
 import it.gov.pagopa.payment.service.payment.common.CommonCreationServiceImpl;
 import it.gov.pagopa.payment.utils.AuditUtilities;
 import it.gov.pagopa.payment.utils.TrxCodeGenUtil;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
-import org.springframework.stereotype.Service;
-import it.gov.pagopa.payment.constants.PaymentConstants;
-
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
 @Slf4j
 @Service
 public class BarCodeCreationServiceImpl extends CommonCreationServiceImpl implements BarCodeCreationService {
@@ -29,7 +33,7 @@ public class BarCodeCreationServiceImpl extends CommonCreationServiceImpl implem
     private final TransactionBarCodeInProgress2TransactionResponseMapper transactionBarCodeInProgress2TransactionResponseMapper;
     private final WalletConnector walletConnector;
     @SuppressWarnings("squid:S00107") // suppressing too many parameters alert
-    protected BarCodeCreationServiceImpl(TransactionInProgress2BaseTransactionResponseMapper transactionInProgress2BaseTransactionResponseMapper,
+    protected BarCodeCreationServiceImpl(TransactionInProgress2TransactionResponseMapper transactionInProgress2TransactionResponseMapper,
                                          TransactionCreationRequest2TransactionInProgressMapper transactionCreationRequest2TransactionInProgressMapper,
                                          RewardRuleRepository rewardRuleRepository,
                                          TransactionInProgressRepository transactionInProgressRepository,
@@ -38,7 +42,7 @@ public class BarCodeCreationServiceImpl extends CommonCreationServiceImpl implem
                                          MerchantConnector merchantConnector,
                                          TransactionBarCodeCreationRequest2TransactionInProgressMapper transactionBarCodeCreationRequest2TransactionInProgressMapper,
                                          TransactionBarCodeInProgress2TransactionResponseMapper transactionBarCodeInProgress2TransactionResponseMapper, WalletConnector walletConnector) {
-        super(transactionInProgress2BaseTransactionResponseMapper,
+        super(transactionInProgress2TransactionResponseMapper,
                 transactionCreationRequest2TransactionInProgressMapper,
                 rewardRuleRepository,
                 transactionInProgressRepository,
@@ -69,7 +73,7 @@ public class BarCodeCreationServiceImpl extends CommonCreationServiceImpl implem
 
             TransactionInProgress trx =
                     transactionBarCodeCreationRequest2TransactionInProgressMapper.apply(
-                            trxBarCodeCreationRequest, channel, userId);
+                            trxBarCodeCreationRequest, channel, userId, initiative != null ? initiative.getInitiativeName() : null);
             generateTrxCodeAndSave(trx);
 
             logCreatedTransaction(trx.getInitiativeId(), trx.getId(), trx.getTrxCode(), userId);
@@ -98,12 +102,14 @@ public class BarCodeCreationServiceImpl extends CommonCreationServiceImpl implem
     }
 
     private void checkWallet(String initiativeId, String userId){
-        BigDecimal walletAmount = walletConnector.getWallet(initiativeId, userId).getAmount();
+        WalletDTO wallet = walletConnector.getWallet(initiativeId, userId);
 
-        if (walletAmount.compareTo(BigDecimal.ZERO) == 0) {
-            throw new ClientExceptionWithBody(HttpStatus.FORBIDDEN,
-                    PaymentConstants.ExceptionCode.BUDGET_EXHAUSTED,
-                    String.format("The budget related to the user on initiativeId [%s] was exhausted.", initiativeId));
+        if (wallet.getAmount().compareTo(BigDecimal.ZERO) == 0) {
+            throw new BudgetExhaustedException(String.format("Budget exhausted for the current user and initiative [%s]", initiativeId));
+        }
+
+        if (PaymentConstants.WALLET_STATUS_UNSUBSCRIBED.equals(wallet.getStatus())){
+            throw new UserNotOnboardedException(ExceptionCode.USER_UNSUBSCRIBED, "The user has unsubscribed from initiative [%s]".formatted(initiativeId));
         }
     }
 }
